Bootstrap version looking pretty good

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Class assignment</title>
+      <title>Class assignment</title>
 
     <!-- Bootstrap -->
     <link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
@@ -15,43 +15,26 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-12"></div>
+        <div class="col-sm-2">
+          <div class="logo">
+            <img src="images/Sparkfun.svg.png" alt="Logo">
+          </div>
+        </div>
+        <div class="col-sm-8">
+        </div>
+        <div class="col-sm-2">
+          <div class="links">
+            <a href="https://www.w3schools.com">Contact Us</a> &nbsp &nbsp
+            <a href="https://www.w3schools.com">Login</a>
+          </div>
+            <div class="search">
+              <form action="/action_page.php">
+                <input type="text" name="fname">
+                <input type="submit" value="Search">
+              </form>
+            </div>
+        </div>
       </div>
-    <div class="page-header">
-      <section>
-      <!-- <div class="logo"> -->
-        <!-- <img src="images/Techtonic.png" alt="Logo"> -->
-      <!-- </div> -->
-      <nav class="navbar navbar-default" role="navigation">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-    <!-- <a class="navbar-brand" href="#">Brand</a> -->
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-left">
-        <div class="logo">
-          <img src="images/Techtonic.png" alt="Logo">
-        </div>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-        <div class="links">
-          <a href="https://www.w3schools.com">Contact Us</a> &nbsp &nbsp
-          <a href="https://www.w3schools.com">Login</a>
-        </div>
-        <div class="search">
-          <form action="/action_page.php">
-            <input type="text" name="fname">
-            <input type="submit" value="Search">
-          </form>
-        </div>
-        </ul>
-      </div>
-      </nav>
-      </section>
     </div>
     <nav class="navbar navbar-default" role="navigation">
       <div class="navbar-header">
@@ -61,9 +44,8 @@
           <span class="icon-bar"></span>
         </button>
       </div>
-  <!-- <a class="navbar-brand" href="#">Brand</a> -->
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav navbar-left">
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav navbar-left">
           <li><a href="#">About Us</a></li>
           <li><a href="#">Our Approach</a></li>
           <li><a href="#">Our Work</a></li>
@@ -72,91 +54,157 @@
         </ul>
       </div>
     </nav>
-</div>
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-6">
-          <img src="images/map.jpg">
+
+
+
+
+
+          <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+              <div class="item active">
+                <img src="images/Slide1.jpg" alt="AVC pic1">
+                <div class="carousel-caption">
+                	<h3>Caterpiller</h3>
+                </div>
+              </div>
+              <div class="item">
+                <img src="images/Slide2.jpg" alt="AVC pic2">
+                <div class="carousel-caption">
+                	<h3>Stuck in the fence</h3>
+                </div>
+              </div>
+              <div class="item">
+                <img src="images/Slide3.jpg" alt="AVC pic3">
+                <div class="carousel-caption">
+                	<h3>Out for a drive</h3>
+                </div>
+              </div>
+            </div>
+
+            <!-- Controls -->
+            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left"></span>
+            </a>
+            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right"></span>
+            </a>
+          </div> <!-- Carousel -->
+
+
+
+
+
+
+
+
+          <!-- <img src="images/Slide1.jpg"> -->
         </div>
         <div class="col-sm-6">
-        <h3>Why use Lorem Ipsum Generator?<br></h3>
-        When you construct a web design you are most likely to not have any content in the beginning.
-        So for the first time you show your web design for your client it can be useful to have some
-        text to show so your client can imagine how it will look like when it is finished. That is
-        why you should use our Lorem Ipsum Generator to generate simple text to fill your projects
-        with. We hope you enjoy it and find it useful!
+          <h3>Sparkfun AVC contestants<br></h3>
+          Here are a few of the contestants from Sparkfun's AVC (Autonomous Vehicle Challenge) from a
+          couple of years ago. The event is pretty well run, interesting and fun to watch. The people
+          who enter the contest are pretty imaginative and creative. There were UFOs, vehicles with
+          a variety of humorous attachments (like the caterpiller to the left), balancing robots and
+          some that defy description. There was even a full size SUV that managed to traverse the
+          course with no one driving it.
+        </div>
       </div>
-      </div>
-
+      <hr>
       <div class="row">
-          <div class="col-sm-4">
-            <div class="newsletter">
-              <b>Newsletter  |  January, 2011<br><br>
-                Newsletter Title</b>
-                <img src="images/dark-forest-road.jpg" class="img-responsive"><br>
-                <br>When you construct a web design you are most likely to not have any content in the beginning.
-                So for the first time you show your web design for your client it can be useful to have some
-                text to show so your client can imagine how it will look like when it is finished. That is
-                why you should use our Lorem Ipsum Generator to generate simple text to fill your projects
-                with. We hope you enjoy it and find it useful!<br><br>
+        <div class="col-sm-4">
+          <div class="newsletter">
+            <b>Newsletter  |  January, 2011<br><br>
+              Newsletter Title</b>
+              <section>
+                <img src="images/Truck400px.jpg" class="img-responsive"><br>
+                The SHARC (Smokey Hills Area Robot Club) entry above was an actual full size SUV that
+                managed to complete the course with no one driving. The passengers you see in the
+                front seat are just passengers. You can see their hands are being held out the window
+                to show that they are not driving. The truck got to drive the course alone because
+                they didn't want it to run over any of the regular size contestants. They were in a demonstration
+                class so they did not compete with the other folks.<br><br>
                 <a href="https://www.w3schools.com">Read more</a>
-            </div>
+              </section>
           </div>
+        </div>
           <div class="col-sm-4">
             <div class="blog">
               <h4>From the Blog</h4>
               <div class="blogtop">
                 <b>Blog Post Title</b><br>
                 January 1, 2011 by <a href="https://www.w3schools.com">John</a><br><br>
-                <img src="images/thickness.jpg" class="img-responsive">
-                When you construct a web design you are most likely to not have any content in the beginning.
-                So for the first time you show your web design for your client it can be useful to have some
-                text to show so your client can imagine how it will look like when it is finished. That is why
-                you should use our Lorem Ipsum Generator to generate simple text to fill your projects with.
-                We hope you enjoy it and find it useful!...
-                <a href="https://www.w3schools.com">Read more</a>
+                <div class=blogtopimage>
+                 <img src="images/Choppr140px.jpg" class="img-responsive">
+                </div>
+                 They even had flying robots that navigated a separate course on their own.
+                 The 'bots had to drop a tennis ball at a target, fly around and over and
+                 under some obsticals and fly through a ring near the finish line for some
+                 extra points. Most of the entries were quad-rotors and hex rotors, but there
+                 were a few helicopters and fixed wing craft. Most of the course was over water
+                 so there was the extra danger of taking a swim.
+                 <a href="https://www.w3schools.com">Read more</a>
               </div>
-
+              <hr>
               <div class="blogbottom">
                 <b>Blog Post Title</b><br>
                 January 1, 2011 by <a href="https://www.w3schools.com">John</a><br><br>
-                <img src="images/Earth.png" class="img-responsive">
-                When you construct a web design you are most likely to not have any content in the beginning.
-                So for the first time you show your web design for your client it can be useful to have some
-                text to show so your client can imagine how it will look like when it is finished. That is why
-                you should use our Lorem Ipsum Generator to generate simple text to fill your projects with.
-                We hope you enjoy it and find it useful!...
+                <div class=blogbottomimage>
+                  <img src="images/AVC14140px.jpg" class="img-responsive">
+                </div>
+                There were quite a few of these guys entered into the AVC. Some of them
+                were suprisingly fast and agile. The most fun was when there were several
+                entries set off at the same time and the collision avoidance was tested.
+                There were actually several collisions, none resulting in any damage.
+                Probably the most expensive ooops was when the Macbook Pro slid out of
+                it's restraint and slid across the pavement for a few feet. The owner
+                didn't seem too upset as the computer belonged to his girlfriend.
                 <a href="https://www.w3schools.com">Read more</a>
               </div>
-          </div>
+            </div>
           </div>
           <div class="col-sm-4">
             <div class="signup">
               <h4>Signup</h4>
-              When you construct a web design you are most likely to not have any content in the beginning.
+              If you like the stuff you see here, sign up to get even more.
               <div class="signup-form">
                 <div class="vertical-menu">
                   <form action="/action_page.php">
+                    <div class="namefield">
                     <input type="text" name="name" value="Your Name"><br />
+                    </div>
+                    <div class="emailfield">
                     <input type="text" name="email" value="Your Email Address">
+                    </div>
+                    <div class="submitbutton">
                     <input type="submit" value="Submit">
+                   </div>
                   </form>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-
-        <div class="row">
-    <div class="col-sm-12">
-      <div class="footer">
-        &#0169 2012 My Company | Denver, CO  |  800-GUD-CODE<br>
-        When you construct a web design<br>
-        you are most likely to not have any content in the beginning.
       </div>
-    </div>
-  </div>
-
+      <hr>
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="footer">
+            &#0169 2012 My Company | Denver, CO  |  800-GUD-CODE<br>
+            When you construct a web design<br>
+            you are most likely to not have any content in the beginning.
+          </div>
+        </div>
+      </div>
     </div>
   <!-- </div> -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -165,19 +213,3 @@
     <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
   </body>
 </html>
-
-
-
-<div class="container">
-  <div class="row">
-    <div class="col-*-*"></div>
-  </div>
-  <div class="row">
-    <div class="col-*-*"></div>
-    <div class="col-*-*"></div>
-    <div class="col-*-*"></div>
-  </div>
-  <div class="row">
-    ...
-  </div>
-</div>
