Clean up CSS after linking to Bootstrap styles

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Prototype</title>
-    <!-- App CSS -->
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
   </head>
 
@@ -89,11 +87,8 @@
             </a>
           </div>
         </div>
-
-
-        <!-- <img class="col-8" src="https://images.unsplash.com/photo-1463432786691-8ec0615f2dfe?dpr=2&auto=format&fit=crop&w=767&h=511&q=80&cs=tinysrgb&crop=" alt="snowy mountain range"/> -->
         <article class="col-4">
-          <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fermentum elit sed semper porttitor.</h4>
+          <h4 class="article-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fermentum elit sed semper porttitor.</h4>
           <p>
             Praesent dictum tempor purus. Donec sed eros vulputate, fermentum sapien eget, varius libero. Nunc sit amet lobortis enim. Vivamus congue nisl in leo rutrum efficitur. Fusce nisi augue, volutpat vel augue id, pretium tempus ante. Curabitur nec libero enim. Cras lobortis ut augue eget maximus.
           </p>
