Added Bootstrap classes and removed unnecessary CSS. Added new input groups for forms with custom CSS.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body class="background-gray">
 
 <!-- HEADER -->
-    <header class="container">
+    <header class="container my-4">
       <div class="row justify-content-between">
         <div class="col-3 logo-container">
           <span class="logo">MySite.com</span><br/>
@@ -26,14 +26,14 @@
               <a class="nav-link" href="javascript:void(0);">Log In</a>
             </li>
           </ul>
-          <form>
-            <div class="form-group row justify-content-end">
-              <div class="col-3">
-                <input class="form-control" type="search" id="search-input"/>
-              </div>
-              <button type="button" class="btn btn-secondary">Search</button>
+          <div class="col-lg-6 offset-lg-6">
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search for...">
+              <span class="input-group-btn">
+                <button class="btn btn-primary" type="button">Go!</button>
+              </span>
             </div>
-          </form>
+          </div>
         </div>
       </div>
     </header>
@@ -41,28 +41,28 @@
 <!-- NAVIGATION -->
     <nav class="container">
       <div class="row">
-        <ul class="nav">
+        <ul class="nav font-weight-bold">
           <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0);">About Us</a>
+            <a class="nav-link text-muted" href="javascript:void(0);">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0);">Our Approach</a>
+            <a class="nav-link text-muted" href="javascript:void(0);">Our Approach</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0);">Our Work</a>
+            <a class="nav-link text-muted" href="javascript:void(0);">Our Work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0);">Clients</a>
+            <a class="nav-link text-muted" href="javascript:void(0);">Clients</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0);">Resources</a>
+            <a class="nav-link text-muted" href="javascript:void(0);">Resources</a>
           </li>
         </ul>
       </div>
     </nav>
 
-<!-- SLIDESHOW SECTION -->
-    <section class="container hero section">
+<!-- HERO -->
+    <section class="container hero section my-4 pb-4">
       <div class="row">
         <div class="col-8">
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -88,85 +88,80 @@
           </div>
         </div>
         <article class="col-4">
-          <h4 class="article-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fermentum elit sed semper porttitor.</h4>
-          <p>
+          <h4 class="my-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fermentum elit sed semper porttitor.</h4>
+          <p class="text-muted">
             Praesent dictum tempor purus. Donec sed eros vulputate, fermentum sapien eget, varius libero. Nunc sit amet lobortis enim. Vivamus congue nisl in leo rutrum efficitur. Fusce nisi augue, volutpat vel augue id, pretium tempus ante. Curabitur nec libero enim. Cras lobortis ut augue eget maximus.
           </p>
-          <span><a class="blue-anchor" href="javascript:void(0);">Read More</a></span>
+          <span><a href="javascript:void(0);">Read More</a></span>
         </article>
       </div>
     </section>
 
-<!-- ARTICLE SECTION -->
-    <section class="container section wrap">
+<!-- ARTICLES -->
+    <section class="container section pb-4">
       <div class="row">
         <!-- NEWSLETTER -->
         <div class="col-4 article-wrapper">
-          <article class="article">
-            <span class="newsletter-heading">Newsletter |</span><span class="date"> January, 2017</span>
-            <h4 class="article-title">Newsletter Title</h4>
-            <img class="img-fluid newsletter-image" src="https://images.unsplash.com/photo-1429081172764-c0ee67ab9afd?dpr=2&auto=format&fit=crop&w=767&h=474&q=80&cs=tinysrgb&crop=" alt="hilly landscape"/>
-            <p>
+          <article class="pl-0 pr-2">
+            <span class="newsletter-heading text-muted font-weight-bold">Newsletter |</span><span class="date text-muted"> January, 2017</span>
+            <h4 class="my-2">Newsletter Title</h4>
+            <img class="img-fluid mb-3" src="https://images.unsplash.com/photo-1429081172764-c0ee67ab9afd?dpr=2&auto=format&fit=crop&w=767&h=474&q=80&cs=tinysrgb&crop=" alt="hilly landscape"/>
+            <p class="text-muted">
               Integer sollicitudin massa vel egestas blandit. Nullam nec urna facilisis, ultricies diam et, fermentum tortor. Donec pretium felis nec gravida imperdiet. Nullam ultricies ex tincidunt arcu porta, in imperdiet ante faucibus. Donec nec faucibus lorem. Donec convallis libero at rhoncus egestas...
             </p>
-            <span class="read-more"><a class="blue-anchor" href="javascript:void(0);">Read More</a></span>
+            <span class="read-more"><a href="javascript:void(0);">Read More</a></span>
           </article>
         </div>
 
         <!-- BLOG POSTS -->
         <div class="col-4 article-wrapper">
-          <article class="article article-top">
-            <span class="newsletter-heading">From the Blog</span>
-            <h4 class="article-title">Blog Post Title</h4>
-            <span class="date"> January 17, 2017 by <a class="blue-anchor" href="javascript:void(0);">John</a></span>
-            <figure class="fig-no-margin">
-              <img class="blog-image" src="https://images.unsplash.com/photo-1470093790102-5aea19caf968?dpr=2&auto=format&fit=crop&w=767&h=511&q=80&cs=tinysrgb&crop=" alt="woman on beach"/>
+          <article class="article-top pb-4 mb-3 px-2">
+            <span class="newsletter-heading text-muted font-weight-bold">From the Blog</span>
+            <h4 class="my-2">Blog Post Title</h4>
+            <span class="date text-muted"> January 17, 2017 by <a href="javascript:void(0);">John</a></span>
+            <figure class="fig-no-margin pt-4">
+              <img class="blog-image mr-3" src="https://images.unsplash.com/photo-1470093790102-5aea19caf968?dpr=2&auto=format&fit=crop&w=767&h=511&q=80&cs=tinysrgb&crop=" alt="woman on beach"/>
             </figure>
-            <p class="p-margin-top">
+            <p class="p-margin-top text-muted">
               Integer sollicitudin massa vel egestas blandit. Nullam nec urna facilisis, ultricies diam et, fermentum tortor. Donec pretium felis nec gravida imperdiet. Nullam ultricies ex tincidunt arcu porta, in imperdiet ante faucibus. Donec nec faucibus lorem. Donec convallis libero at rhoncus egestas...
-              <span class="read-more"><a class="blue-anchor" href="javascript:void(0);">Read More</a></span>
+              <span class="read-more"><a href="javascript:void(0);">Read More</a></span>
             </p>
           </article>
-          <article class="article">
-            <h4 class="article-title">Blog Post Title</h4>
-            <span class="date"> February 1, 2017 by <a class="blue-anchor" href="javascript:void(0);">John</a></span>
-            <figure class="fig-no-margin">
-              <img class="blog-image" src="https://images.unsplash.com/photo-1474464123933-9553d590bc7c?dpr=2&auto=format&fit=crop&w=767&h=510&q=80&cs=tinysrgb&crop=" alt="redrock canyon"/>
+          <article class="px-2">
+            <h4 class="my-2">Blog Post Title</h4>
+            <span class="date text-muted"> February 1, 2017 by <a href="javascript:void(0);">John</a></span>
+            <figure class="fig-no-margin pt-4">
+              <img class="blog-image mr-3" src="https://images.unsplash.com/photo-1474464123933-9553d590bc7c?dpr=2&auto=format&fit=crop&w=767&h=510&q=80&cs=tinysrgb&crop=" alt="redrock canyon"/>
             </figure>
-            <p class="p-margin-top">
+            <p class="p-margin-top text-muted">
               Integer sollicitudin massa vel egestas blandit. Nullam nec urna facilisis, ultricies diam et, fermentum tortor. Donec pretium felis nec gravida imperdiet. Nullam ultricies ex tincidunt arcu porta, in imperdiet ante faucibus. Donec nec faucibus lorem. Donec convallis libero at rhoncus egestas...
-              <span class="read-more"><a class="blue-anchor" href="javascript:void(0);">Read More</a></span>
+              <span class="read-more"><a href="javascript:void(0);">Read More</a></span>
             </p>
           </article>
         </div>
 
         <!-- SIGN UP -->
-        <div class="col-4 article-wrapper no-border">
-          <article class="article">
-            <span class="newsletter-heading">Sign Up</span>
-            <p class="sign-up-paragraph">
+        <div class="col-4 article-wrapper border-right-0">
+          <article class="px-2">
+            <span class="newsletter-heading text-muted font-weight-bold">Sign Up</span>
+            <p class="text-muted mt-3">
               Nam iaculis magna non varius aliquet.
             </p>
-            <form>
-              <div class="form-group row">
-                <div class="col">
-                  <input class="form-control sign-up-input" type="name" id="name-input" value="Your Name"/>
-                  <input class="form-control sign-up-input" type="email" id="email-input" value="Your Email Address"/>
-                  <!-- <input class="sign-up-input" type="email" value="Your Email Address"/><br> -->
-                  <button type="button" class="btn btn-secondary">Submit</button>
-                  <!-- <input type="button" value="Submit"/> -->
-                </div>
-              </div>
+            <form class="form-signin">
+              <label for="inputEmail" class="sr-only">Email address</label>
+              <input type="email" id="inputEmail" class="form-control m-0" placeholder="Email address" required autofocus>
+              <label for="inputName" class="sr-only">Name</label>
+              <input type="name" id="inputName" class="form-control" placeholder="Name" required>
+              <button class="btn btn-primary mt-3" type="submit">Submit</button>
             </form>
           </article>
         </div>
       </div>
-
-    <!-- END OF ARTICLE SECTION -->
+    <!-- END OF ARTICLES -->
     </section>
 
     <!-- FOOTER -->
-    <footer class="container">
+    <footer class="container text-muted my-4">
         <small>&copy; 2017 My Company. All rights reserved. | Denver, CO | 800-314-1212</small><br/>
         <small>Nam ut turpis in nibh ornare bibendum ut non nulla.</small><br/>
         <small>Aliquam erat volutpat.</small>
