--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
       <title>Class assignment</title>
 
     <!-- Bootstrap -->
@@ -13,6 +14,8 @@
 
   </head>
   <body>
+
+    <!-- Header -->
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-2">
@@ -36,6 +39,8 @@
         </div>
       </div>
     </div>
+
+    <!-- Navbar -->
     <nav class="navbar navbar-default" role="navigation">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -54,14 +59,12 @@
         </ul>
       </div>
     </nav>
+    <!-- Main part of page -->
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-6">
 
-
-
-
-
+          <!-- Snagged from the internet -->
           <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
@@ -102,14 +105,8 @@
           </div> <!-- Carousel -->
 
 
-
-
-
-
-
-
-          <!-- <img src="images/Slide1.jpg"> -->
         </div>
+        <!-- Content to the right of the carousel -->
         <div class="col-sm-6">
           <h3>Sparkfun AVC contestants<br></h3>
           Here are a few of the contestants from Sparkfun's AVC (Autonomous Vehicle Challenge) from a
@@ -121,6 +118,8 @@
         </div>
       </div>
       <hr>
+
+      <!-- Lower part of the main section -->
       <div class="row">
         <div class="col-sm-4">
           <div class="newsletter">
@@ -138,6 +137,8 @@
               </section>
           </div>
         </div>
+
+        <!-- Center part of lower main section -->
           <div class="col-sm-4">
             <div class="blog">
               <h4>From the Blog</h4>
@@ -173,6 +174,8 @@
               </div>
             </div>
           </div>
+
+          <!-- Right side of lower main section -->
           <div class="col-sm-4">
             <div class="signup">
               <h4>Signup</h4>
@@ -196,6 +199,8 @@
           </div>
       </div>
       <hr>
+      
+      <!-- Footer -->
       <div class="row">
         <div class="col-sm-12">
           <div class="footer">
