--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 <!-- HEADER -->
     <header class="container my-4">
       <div class="row justify-content-between">
-        <div class="col-3 logo-container">
+        <div class="col-3 logo-container p-3">
           <span class="logo">MySite.com</span><br/>
           <span class="company-subtitle">Website Prototype</span>
         </div>
-        <div class="col">
+        <div class="col pr-0">
           <ul class="nav justify-content-end">
             <li class="nav-item">
               <a class="nav-link" href="javascript:void(0);">Contact Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="javascript:void(0);">Log In</a>
+              <a class="nav-link pr-0" href="javascript:void(0);">Log In</a>
             </li>
           </ul>
-          <div class="col-lg-6 offset-lg-6">
+          <div class="col-lg-6 offset-lg-6 pr-0">
             <div class="input-group">
               <input type="text" class="form-control" placeholder="Search for...">
               <span class="input-group-btn">
@@ -42,7 +42,7 @@
     <nav class="container">
       <div class="row">
         <ul class="nav font-weight-bold">
-          <li class="nav-item">
+          <li class="nav-item px-2">
             <a class="nav-link text-muted" href="javascript:void(0);">About Us</a>
           </li>
           <li class="nav-item">
@@ -62,16 +62,16 @@
     </nav>
 
 <!-- HERO -->
-    <section class="container hero section my-4 pb-4">
+    <section class="container hero section mt-4 mb-0 pb-4">
       <div class="row">
-        <div class="col-8">
+        <div class="col-8 p-0">
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner" role="listbox">
               <div class="carousel-item active">
                 <img class="d-block img-fluid" src="https://images.unsplash.com/photo-1463432786691-8ec0615f2dfe?dpr=2&auto=format&fit=crop&w=767&h=511&q=80&cs=tinysrgb&crop=" alt="Snowy Mountain Range">
               </div>
               <div class="carousel-item">
-                <img class="d-block img-fluid" src="https://images.unsplash.com/photo-1428447207228-b396f310848b?dpr=2&auto=format&fit=crop&w=1199&h=799&q=80&cs=tinysrgb&crop=" alt="Glacier Lake">
+                <img class="d-block img-fluid" src="https://images.unsplash.com/photo-1428447207228-b396f310848b?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=" alt="Glacier Lake">
               </div>
               <div class="carousel-item">
                 <img class="d-block img-fluid" src="https://images.unsplash.com/photo-1435783099294-283725c37230?dpr=2&auto=format&fit=crop&w=1199&h=749&q=80&cs=tinysrgb&crop=" alt="Ocean Cliffs">
@@ -87,7 +87,7 @@
             </a>
           </div>
         </div>
-        <article class="col-4">
+        <article class="col-4 pl-4">
           <h4 class="my-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fermentum elit sed semper porttitor.</h4>
           <p class="text-muted">
             Praesent dictum tempor purus. Donec sed eros vulputate, fermentum sapien eget, varius libero. Nunc sit amet lobortis enim. Vivamus congue nisl in leo rutrum efficitur. Fusce nisi augue, volutpat vel augue id, pretium tempus ante. Curabitur nec libero enim. Cras lobortis ut augue eget maximus.
@@ -98,11 +98,11 @@
     </section>
 
 <!-- ARTICLES -->
-    <section class="container section pb-4">
+    <section class="container section">
       <div class="row">
         <!-- NEWSLETTER -->
-        <div class="col-4 article-wrapper">
-          <article class="pl-0 pr-2">
+        <div class="col-4 article-wrapper pl-0">
+          <article class="pl-0 pr-2 my-3">
             <span class="newsletter-heading text-muted font-weight-bold">Newsletter |</span><span class="date text-muted"> January, 2017</span>
             <h4 class="my-2">Newsletter Title</h4>
             <img class="img-fluid mb-3" src="https://images.unsplash.com/photo-1429081172764-c0ee67ab9afd?dpr=2&auto=format&fit=crop&w=767&h=474&q=80&cs=tinysrgb&crop=" alt="hilly landscape"/>
@@ -115,7 +115,7 @@
 
         <!-- BLOG POSTS -->
         <div class="col-4 article-wrapper">
-          <article class="article-top pb-4 mb-3 px-2">
+          <article class="article-top pb-4 my-3 px-2">
             <span class="newsletter-heading text-muted font-weight-bold">From the Blog</span>
             <h4 class="my-2">Blog Post Title</h4>
             <span class="date text-muted"> January 17, 2017 by <a href="javascript:void(0);">John</a></span>
@@ -127,7 +127,7 @@
               <span class="read-more"><a href="javascript:void(0);">Read More</a></span>
             </p>
           </article>
-          <article class="px-2">
+          <article class="px-2 pb-4">
             <h4 class="my-2">Blog Post Title</h4>
             <span class="date text-muted"> February 1, 2017 by <a href="javascript:void(0);">John</a></span>
             <figure class="fig-no-margin pt-4">
@@ -141,17 +141,17 @@
         </div>
 
         <!-- SIGN UP -->
-        <div class="col-4 article-wrapper border-right-0">
-          <article class="px-2">
+        <div class="col-4 article-wrapper border-right-0 pr-0">
+          <article class="px-2 my-3">
             <span class="newsletter-heading text-muted font-weight-bold">Sign Up</span>
             <p class="text-muted mt-3">
               Nam iaculis magna non varius aliquet.
             </p>
-            <form class="form-signin">
+            <form class="form-signin ml-0">
               <label for="inputEmail" class="sr-only">Email address</label>
-              <input type="email" id="inputEmail" class="form-control m-0" placeholder="Email address" required autofocus>
+              <input type="name" id="inputName" class="form-control m-0" placeholder="Name" required autofocus>
               <label for="inputName" class="sr-only">Name</label>
-              <input type="name" id="inputName" class="form-control" placeholder="Name" required>
+              <input type="email" id="inputEmail" class="form-control" placeholder="Email" required>
               <button class="btn btn-primary mt-3" type="submit">Submit</button>
             </form>
           </article>
@@ -161,7 +161,7 @@
     </section>
 
     <!-- FOOTER -->
-    <footer class="container text-muted my-4">
+    <footer class="container text-muted my-4 pl-0">
         <small>&copy; 2017 My Company. All rights reserved. | Denver, CO | 800-314-1212</small><br/>
         <small>Nam ut turpis in nibh ornare bibendum ut non nulla.</small><br/>
         <small>Aliquam erat volutpat.</small>
