More tinkering trying to keep the text off of the carousel.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-      <title>Class assignment</title>
+      <title>Class assignment bootstrap version</title>
 
     <!-- Bootstrap -->
     <link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
@@ -16,29 +16,31 @@
   <body>
 
     <!-- Header -->
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-2">
-          <div class="logo">
-            <img src="images/Sparkfun.svg.png" alt="Logo">
-          </div>
-        </div>
-        <div class="col-sm-8">
-        </div>
-        <div class="col-sm-2">
-          <div class="links">
-            <a href="https://www.w3schools.com">Contact Us</a> &nbsp &nbsp
-            <a href="https://www.w3schools.com">Login</a>
-          </div>
-            <div class="search">
-              <form action="/action_page.php">
-                <input type="text" name="fname">
-                <input type="submit" value="Search">
-              </form>
+    <div class="header">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm-2">
+            <div class="logo">
+              <img src="images/Sparkfun.svg.png" alt="Logo">
             </div>
+          </div>
+          <div class="col-sm-8">
+          </div>
+          <div class="col-sm-2">
+            <div class="links">
+              <a href="https://www.w3schools.com">Contact Us</a> &nbsp &nbsp
+              <a href="https://www.w3schools.com">Login</a>
+            </div>
+              <div class="search">
+                <form action="/action_page.php">
+                  <input type="text" name="fname">
+                  <input type="submit" value="Search">
+                </form>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
 
     <!-- Navbar -->
     <nav class="navbar navbar-default" role="navigation">
@@ -106,9 +108,12 @@
 
 
         </div>
+        <!-- <div class="col-sm-1"> -->
+        <!-- </div> -->
         <!-- Content to the right of the carousel -->
+        <!-- <div class="col-sm-5"> -->
         <div class="col-sm-6">
-          <h3>Sparkfun AVC contestants<br></h3>
+          <h3>Sparkfun AVC contestants</h3><br />
           Here are a few of the contestants from Sparkfun's AVC (Autonomous Vehicle Challenge) from a
           couple of years ago. The event is pretty well run, interesting and fun to watch. The people
           who enter the contest are pretty imaginative and creative. There were UFOs, vehicles with
@@ -117,22 +122,23 @@
           course with no one driving it.
         </div>
       </div>
+
       <hr>
 
       <!-- Lower part of the main section -->
       <div class="row">
         <div class="col-sm-4">
           <div class="newsletter">
-            <b>Newsletter  |  January, 2011<br><br>
+            <b>Newsletter  |  January, 2011<br /><br />
               Newsletter Title</b>
               <section>
-                <img src="images/Truck400px.jpg" class="img-responsive"><br>
+                <img src="images/Truck400px.jpg" class="img-responsive"><br />
                 The SHARC (Smokey Hills Area Robot Club) entry above was an actual full size SUV that
                 managed to complete the course with no one driving. The passengers you see in the
                 front seat are just passengers. You can see their hands are being held out the window
                 to show that they are not driving. The truck got to drive the course alone because
                 they didn't want it to run over any of the regular size contestants. They were in a demonstration
-                class so they did not compete with the other folks.<br><br>
+                class so they did not compete with the other folks.<br /><br />
                 <a href="https://www.w3schools.com">Read more</a>
               </section>
           </div>
@@ -143,8 +149,8 @@
             <div class="blog">
               <h4>From the Blog</h4>
               <div class="blogtop">
-                <b>Blog Post Title</b><br>
-                January 1, 2011 by <a href="https://www.w3schools.com">John</a><br><br>
+                <b>Blog Post Title</b><br />
+                January 1, 2011 by <a href="https://www.w3schools.com">John</a><br /><br />
                 <div class=blogtopimage>
                  <img src="images/Choppr140px.jpg" class="img-responsive">
                 </div>
@@ -158,8 +164,8 @@
               </div>
               <hr>
               <div class="blogbottom">
-                <b>Blog Post Title</b><br>
-                January 1, 2011 by <a href="https://www.w3schools.com">John</a><br><br>
+                <b>Blog Post Title</b><br />
+                January 1, 2011 by <a href="https://www.w3schools.com">John</a><br /><br />
                 <div class=blogbottomimage>
                   <img src="images/AVC14140px.jpg" class="img-responsive">
                 </div>
@@ -198,14 +204,15 @@
             </div>
           </div>
       </div>
+
       <hr>
-      
+
       <!-- Footer -->
       <div class="row">
         <div class="col-sm-12">
           <div class="footer">
-            &#0169 2012 My Company | Denver, CO  |  800-GUD-CODE<br>
-            When you construct a web design<br>
+            &#0169 2017 My Company | Denver, CO  |  800-GUD-CODE<br />
+            When you construct a web design<br />
             you are most likely to not have any content in the beginning.
           </div>
         </div>
