Added sticky navigation for mobile.

--- a/FirstAssignment BootStrap/index.html
+++ b/FirstAssignment BootStrap/index.html
@@ -41,7 +41,7 @@
 
         </div>
     </header>
-    <nav class="nav navbar-inverse">
+    <nav class="nav navbar-inverse" data-spy="affix" data-offset-top="400">
         <div class="container-fluid">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="icon-bar"></span>
