--- a/BootStrap_Project/index.html
+++ b/BootStrap_Project/index.html
@@ -6,6 +6,9 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="css/styles.css">
+		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Play:400,700" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Exo:900i" rel="stylesheet">
 	</head>
 	<body>
 	
@@ -21,7 +24,7 @@
 				  <span class="icon-bar"></span>
 				  <span class="icon-bar"></span>
 				</button>
-				<img src="#"/>
+				<p class="logo">TECH++</p>
 			  </div>
 
 			  <!-- Collect the nav links, forms, and other content for toggling -->
@@ -61,6 +64,39 @@
 			</div><!-- /.container-fluid -->
 		</nav>
 		
+		
+		<!-- 2nd NAVBAR-->
+		
+		
+		<div class="navbar navbar-inverse mynavv navbar-static-top" >
+			<div class="container-fluid">	
+				<div class="navbar-header" >
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false" id="leftBurger">
+					  <span class="sr-only">Toggle navigation</span>
+					  <span class="icon-bar"></span>
+					  <span class="icon-bar"></span>
+					  <span class="icon-bar"></span>
+					</button>
+				</div>
+				
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav navbar-left">
+						<li class="liTopics">TOPICS</li>
+						<li><a href="#" class="a1">Internet Of Things</a></li>
+						<li><a href="#" class="a2">Nano-Tech</a></li>
+						<li><a href="#" class="a3">Artificial Intelligence</a></li>
+						<li><a href="#" class="a4">Programming</a></li>
+						<li><a href="#" class="a5">Energy</a></li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle a6" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+							  <li><a href="#"></a></li>
+							</ul>
+						 </li>
+					</ul>
+				</div>
+			</div>		
+		</div>
 		
 		
 		<!-- TOP MODULE -->
@@ -115,8 +151,7 @@
 					<div id="paraSection" class="col-lg-4 col-md-3 col-sm-12 col-xs-12"> 	
 						<p>Donec ac velit placerat, ornare justo a, cursus leo.
 							Ut ut elementum velit. Sed quis porta elit. Cras facilisis id massa ac sagittis. Cras facilisis mollis felis,
-							eget congue dui gravida a. Sed tincidunt pharetra semper. Donec ac metus interdum, semper arcu quis, bibendum
-							tellus. &nbsp; &nbsp; <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+							eget congue dui gravida a. Sed tincidunt pharetra semper. Donec ac metus interdum.. &nbsp; &nbsp; <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
 						</p>
 					</div>	
 			</div>		
@@ -193,6 +228,18 @@
 				</p>
 			</div>
 		</div>
+		
+		
+		<!-- FOOTER-->
+		<footer>
+			<p class="logo">TECH++</p>
+			<ul>
+				<li>About</li>
+				<li>Privacy and Cookies</li>
+				<li>Careers</li>
+				<li>Contact Us</li>
+			</ul>
+		</footer>
 
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
